Updated Kotlin to 1.6.21
Removed deprecated and backward-compatibility methods