@@ -32,7 +32,7 @@ repositories {
 	mavenCentral()
 }
 
-version = "1.2.0.0"
+version = "1.2.1.0"
 archivesBaseName = "1.7.10-ASJCore"
 
 minecraft {
